# VSA

./: .gitignore
moex_vsa_backtester/: .gitignore  PROMPTS.md  README.md  SKILLS.md  main.py  pyproject.toml  requirements.txt
moex_vsa_backtester/ai/: __init__.py  dataset.py  inference.py  model.py  trainer.py
moex_vsa_backtester/backtest/: engine.py  metrics.py
moex_vsa_backtester/config/: __init__.py
moex_vsa_backtester/core/: data_loader.py  risk_manager.py  trade_journal.py  virtual_trader.py  vsa_engine.py
moex_vsa_backtester/db/: __init__.py
moex_vsa_backtester/domain/: __init__.py  constants.py  enums.py  models.py
moex_vsa_backtester/models/: ASTR_model.pt  LKOH_model.pt  MTSS_model.pt  NVTK_model.pt  PHOR_model.pt  PLZL_model.pt  ROSN_model.pt  SBER_model.pt  SNGSP_model.pt  VTBR_model.pt  trade_model.pt
moex_vsa_backtester/scanner/: __init__.py  scanner.py  scheduler.py  virtual_trading.py
moex_vsa_backtester/scripts/: load_moex_data.py
moex_vsa_backtester/tests/: test_risk.py  test_vsa.py
moex_vsa_backtester/utils/: market_hours.py
